--- a/less/responsive-767px-max.less
+++ b/less/responsive-767px-max.less
@@ -155,8 +155,8 @@
     }
     // Move over buttons in .form-actions to align with .controls
     .form-actions {
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: @baseLineWidth;
+      padding-right: @baseLineWidth;
     }
   }
 
@@ -176,9 +176,9 @@
 
   // Modals
   .modal {
-    top:   10px;
-    left:  10px;
-    right: 10px;
+    top:   @ts;
+    left:  @lhs;
+    right: @rhs;
   }
   .modal-header .close {
     padding: 10px;
