--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -22,7 +22,6 @@ body {
   line-height: @baseLineHeight;
   color: @textColor;
   background-color: @bodyBackground;
-//  background: url("/bootstrap/img/dos-grid.png");
 }
 
 
@@ -50,11 +49,9 @@ a:focus {
 
 // Add polaroid-esque trim
 .img-polaroid {
-  padding: 4px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0,0,0,.2);
-  .box-shadow(0 1px 3px rgba(0,0,0,.1));
+  padding: @ts @rhs @bs @lhs;
+  background-color: @white;
+  border: @borderWidth solid @black;
 }
 
 // Perfect circle
